--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,190 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.gallrey{
+-webkit-column-count: 3;
+-moz-column-count: 3;
+column-count: 3;
+-webkit-column-width: 43%;
+column-width: 43%;
+padding: 0 12px; 
+}
+.gallrey .pics{
+  -webkit-transition:all 350ms ease ;
+  transition: all 350ms ease;
+  cursor: pointer;
+  margin-bottom: 12px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.gallrey .pics:hover{
+  filter: grayscale(.8);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.state{
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0px;
+  left: 0px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color:ghostwhite;
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0);
+}
+.state.open{
+ visibility: visible;
+ opacity: 1;
+ transform: scale(1);
 }
 
-.App-link {
-  color: #61dafb;
+.state img{
+  width: auto;
+  max-width: 100%;
+  height: auto;
+  max-height: 100%;
+  display: block;
+  line-height: 0;
+  box-sizing: border-box;
+  padding: 20px 0 20px;
 }
+#btn1{
+  height: 50px;
+  width: 100px;
+  border: 0px;
+  background-color:ghostwhite;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
+#btn2{
+  height: 50px;
+  width: 100px;
+  border: 0px;
+  background-color:ghostwhite;
+}
+/* .G1{
+  height: 500px;
+  width: 100%;
+}
+.Img1{
+  display: flex;
+  height: 125px;
+  width: 100%;
+ 
+}
+.Img2{
+  display: flex;
+  height: 125px;
+  width: 100%;
+  
+}
+.Img3{
+  display: flex;
+  height: 125px;
+  width: 100%;
+ 
+}
+.Img4{
+  display: flex;
+  height: 125px;
+  width: 100%;
+}
+.img1{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img2{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img3{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img4{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img5{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img6{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img7{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img8{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img9{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img10{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img11{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img12{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img13{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img14{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img15{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img16{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img17{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img18{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img19{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+}
+.img20{
+  height: 125px;
+  width: 20%;
+  border: 1px solid;
+} */
